fixed alignment icons

--- a/src/styles/scss/style.scss
+++ b/src/styles/scss/style.scss
@@ -82,6 +82,12 @@ html[data-theme='dark'] {
 
 .portfolio {
   text-align: center;
+
+  img {
+    height: 4rem;
+    margin-bottom: 2rem;
+    
+  }
 }
 
 h1, h2 {
@@ -126,6 +132,8 @@ ul li {
 font-size: 2rem;
 
 }
+
+
 
 
 }
